@@ -71,7 +71,7 @@ dependencies {
     compile 'com.intellij:annotations:12.0'
     compile 'io.goobox:goobox-sync-common:0.0.1'
     testCompile 'junit:junit:4.12'
-    testCompile 'org.jmockit:jmockit:1.36'
+    testCompile 'org.jmockit:jmockit:1.37'
     testCompile 'com.squareup.okhttp3:mockwebserver:3.9.1'
 }
 
@@ -94,7 +94,11 @@ run {
     }
 }
 
-def siaVersion = 'v1.3.1-rc4'
+test {
+    jvmArgs "-Djdk.attach.allowAttachSelf"
+}
+
+def siaVersion = 'v1.3.1'
 def siaArchives = [
         ['key': 'win64', 'value': 'windows-amd64'],
         ['key': 'linux', 'value': 'linux-amd64'],
@@ -112,7 +116,7 @@ siaArchives.each { type ->
         outputs.dir sia.toPath().resolve("Sia-$siaVersion-$type.value")
         doLast {
             sia.mkdirs()
-//            ant.get(src: "https://github.com/NebulousLabs/Sia/releases/download/$siaVersion/Sia-$siaVersion-${type.value}.zip", dest: archive)
+            ant.get(src: "https://github.com/NebulousLabs/Sia/releases/download/$siaVersion/Sia-$siaVersion-${type.value}.zip", dest: archive)
             ant.unzip(src: archive, dest: sia, stripAbsolutePathSpec: true)
             sia.toPath().resolve("Sia-$siaVersion-${type.value}/siad").toFile().setExecutable(true)
         }
